<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyGeoLocation</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="label_latitude">Latitude:</string>
    <string name="label_longitude">Longitude:</string>
    <string name="label_altitude">Altitude:</string>
    <string name="label_accuracy">Accuracy:</string>
    <string name="label_address">Address:</string>
    <string name="label_check_again">Check Internet connectivity again</string>
    <string name="text_splash_check_connection">Checking for Internet connection...</string>
    <string name="text_splash_obtaining_loc">Please wait while obtaining location...</string>
    <string name="text_main_no_reverse_geocode_results">Could not find the address for this location...</string>
    <string name="text_empty"></string>
    <string name="title_activity_about_screen">About</string>
    <string name="text_about_author">Developed by Alexandru Moș.</string>
    <string name="text_about_licence">Released under MIT licence.</string>
    <string name="text_about_source_code">Source code available on:</string>
    <string name="text_about_source_code_link"><a href="https://github.com/alexandrumos/mygeolocation-android">https://github.com/alexandrumos/mygeolocation-android</a></string>
    <string name="text_about_uses">Uses <a href="https://github.com/osmdroid/osmdroid">osmdroid</a> to display the map and <a href="https://github.com/kevinsawicki/http-request">Kevin Sawicki\'s Http Request class</a> to retrieve data from <a href="https://developers.google.com/maps/documentation/geocoding/">The Google Geocoding API</a>.</string>
    <string name="toast_locating">Please wait while your position is detected...</string>
</resources>
