<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="2"
    android:background="#00aeff">

    <org.osmdroid.views.MapView
        android:id = "@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="@drawable/appbg"
        android:padding="16dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_latitude"
                    android:id="@+id/textView"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_empty"
                    android:id="@+id/textLatitude"
                    android:autoText="false"
                    android:background="@drawable/textbg"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_longitude"
                    android:id="@+id/textView3"
                    android:singleLine="false"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_empty"
                    android:id="@+id/textLongitude"
                    android:background="@drawable/textbg"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_accuracy"
                    android:id="@+id/textView30"
                    android:singleLine="false"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_empty"
                    android:id="@+id/textAccuracy"
                    android:background="@drawable/textbg"
                    android:padding="5dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="13">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="13">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address:"
                    android:id="@+id/textView9"
                    android:paddingTop="16dp"
                    android:paddingLeft="5dp"
                    android:paddingBottom="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/text_empty"
                    android:id="@+id/textAddress"
                    android:padding="5dp"
                    android:background="@drawable/textbg" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>